--- a/PythonSocket/dockerfile
+++ b/PythonSocket/dockerfile
@@ -1,8 +1,10 @@
-FROM python:3.10
-
-EXPOSE 65432
+FROM python:3.10 as base
 
 RUN apt update && apt install -y ffmpeg libsm6 libxext6
+
+FROM base
+
+EXPOSE 65432
 
 WORKDIR /app
 COPY ./requirements.txt .
